[project]
name = "rpa-landuse-backend"
version = "1.0.0"
description = "FastAPI backend for RPA Land Use Analytics"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.1.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "duckdb>=1.0.0",
    # Authentication
    "bcrypt>=4.0.0",
    "PyJWT>=2.8.0",
    # Landuse package for AI agent (from git - pinned to latest)
    "rpa-landuse-analytics @ git+https://github.com/mihiarc/rpa-landuse.git@ce5d376",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
